SecurityConfig update.